<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.asteroidsjaylib</groupId>
        <artifactId>AsteroidsJaylib</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <groupId>io.asteroidsjaylib.player</groupId>
    <artifactId>Player</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.asteroidsjaylib.common</groupId>
            <artifactId>Common</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.collision</groupId>
            <artifactId>CommonCollision</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.player</groupId>
            <artifactId>CommonPlayer</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.ownership</groupId>
            <artifactId>CommonOwnership</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.render</groupId>
            <artifactId>CommonRender</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.bullet</groupId>
            <artifactId>CommonBullet</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.spawn</groupId>
            <artifactId>CommonSpawn</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.physics3d</groupId>
            <artifactId>CommonPhysics3D</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asteroidsjaylib.common.crystal</groupId>
            <artifactId>CommonCrystal</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
    </dependencies>

</project>